// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package falsework.common;

option java_multiple_files = true;
option java_package = "com.falsework.core.generated.common";
option java_outer_classname = "CommonProto";

// the common request meta for all protocol.
message RequestMeta {
    reserved 1 to 50;
    map<string, string> attributes = 51;
}
// the common response meta for all protocol.
message ResponseMeta {
    string errCode = 1;
    string details = 2;
    repeated ResponseMeta causes = 3;
    reserved 4 to 50;
    map<string, string> attributes = 51;
}
